@@ -1,4 +1,5 @@
 * 0.7 : unreleased
+ - Escape forward slash characters for compatibility with Solr 4.0 (@davidjb)
  - Fix handling of queries with ``boost_relevancy`` applied - boost was 
    previously lost in some cases. (@davidjb)
  - Ensure 'more like this' results are transformed using a query's
